# AI-Browser

./: .gitignore  CLAUDE.md  PRD.md  Tasks.md  chromium_hack.go  cleanup.go  config.go  gen_icon.go  go.mod  main.go  multiview.go  package-lock.json  package.json  tabbar.go  test_cafe_iframe.cjs  test_naver_cafe.cjs  test_naver_mail.cjs  tray.go  ui.go  updater.go  webview2_events.go
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
winres/: winres.json
